fixed layout bug in safari caasing header elements to bleed into main content elements, by being more explicit in header grid settings. Also added some padding to the bottom of <main> in each page.

--- a/www-src/scss/_base.scss
+++ b/www-src/scss/_base.scss
@@ -17,6 +17,7 @@ body {
 main {
   flex: 1;
   z-index: 2;
+  padding-bottom: 4em;
 }
 
 body > header,
