--- a/www-src/scss/_header.scss
+++ b/www-src/scss/_header.scss
@@ -1,31 +1,42 @@
 #pageHeader {
-  position: relative;
-  text-align: center;
+  // position: relative;
+  // text-align: center;
+
+  grid-template-rows: 6em auto;
+  grid-template-areas:
+    ". pagetitle ."
+    ". subtitle .";
+
+  margin-bottom: 2em;
+
+  > * {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+  }
+
+  &:first-child {
+    padding-top: 6em;
+  }
 
   h1 {
-    color: getCol("highlight");
-    margin: 8rem 0 0 0;
+    grid-area: pagetitle;
+    text-indent: -9999px;
 
-    font-size: 4em;
-    font-family: $titlefont;
-    line-height: 0.928em;
-    font-weight: 500;
-    text-transform: uppercase;
     background-image: url("../img/goc-logo-black.png");
     background-repeat: no-repeat;
     background-size: 100%;
-    width: 100%;
-    height: 80%;
-    text-indent: -9999px;
-    // padding-top: 6em;
   }
 
   h3 {
+    grid-area: subtitle;
+
+    padding-top: 1vw;
+
     color: getCol("accent");
     font-family: $titlefont;
-
+    text-align: center;
     font-size: 0.6em;
-    margin-top: 4em;
     line-height: 2.2em;
 
     span {
@@ -33,27 +44,32 @@
       font-size: 1.8em;
     }
 
-    @include sm-screen {
-      margin-top: 8em;
-      font-size: 0.8em;
-    }
-
     text-transform: uppercase;
   }
+}
 
-  padding-bottom: 2em;
+@include sm-screen {
+  #pageHeader {
+    grid-template-rows: 8em auto;
+    margin-bottom: 3.5em;
 
-  $col: getCol("light");
-  $startA: 0%;
-  $startB: 30%;
-  $opacity-a: 0.5;
-  $opacity-b: 0.3;
-  $opacity-c: 0;
+    h3 {
+      font-size: 0.8em;
+    }
+  }
+}
 
-  background: linear-gradient(
-    to bottom,
-    rgba($col, $opacity-a) $startA,
-    rgba($col, $opacity-b) $startB,
-    rgba($col, $opacity-c) 100%
-  );
+@include lg-screen {
+  #pageHeader {
+    grid-template-rows: 8em auto;
+    margin-bottom: 4.5em;
+
+    h3 {
+      font-size: 0.8em;
+      span {
+        display: block;
+        font-size: 2em;
+      }
+    }
+  }
 }
